# hypymedia

./: .gitignore  LICENSE  README.md  pyproject.toml  test.html  tester.py
hypymedia/: __init__.py  html_list.py  main.py  main3.py
scr/hypymedia/: _html_element_maker.py  main.py
tests/: test_main.py
utils/: _html_element_maker.py
