[tool.poetry]
name = "hypymedia"
version = "0.1.0"
description = "HATEOAS tool for python"
authors = ["Tel Stupple <telstupple@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
