[tool.poetry]
name = "hypymedia"
version = "0.1.11"
description = "HTML creation via Python for HATEOAS applications. #hypermediaFTW"
authors = ["Tel Stupple <telstupple@gmail.com>"]
packages = [{ include = "hypymedia" }]
readme = "README.md"

[tool.poetry.urls]
"Homepage" = "https://github.com/telboyWA/hypymedia"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
